# tinylang

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_driver.cpp
benchmarks/programs/: arithmetic.tl  loops.tl  recursion.tl
cmake/: CPM.cmake  tinylangConfig.cmake.in
examples/: closures.tl  control_flow.tl  fib.tl  fizzbuzz.tl  quickstart.tl
include/tl/: ast.hpp  bytecode.hpp  chunk.hpp  compiler.hpp  disasm.hpp  error.hpp  gc.hpp  lexer.hpp  opcodes.hpp  optimizer.hpp  parser.hpp  span.hpp  string.hpp  table.hpp  token.hpp  value.hpp  vm.hpp
scripts/: build.sh  run.sh
src/: ast.cpp  chunk.cpp  compiler.cpp  disasm.cpp  error.cpp  gc.cpp  lexer.cpp  main_repl.cpp  opcodes.cpp  optimizer.cpp  parser.cpp  string.cpp  table.cpp  value.cpp  vm.cpp
tests/: CMakeLists.txt  lexer_test.cpp  vm_test.cpp
tools/: tlc.cpp  tldis.cpp
